@@ -9,10 +9,10 @@ SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vm
 DIST VMware-server-linux-client-1.0.4-56528.zip 23337450 RMD160 7183ba1d88c06bf9bbad74b01515f59598e64394 SHA1 f079a037c9291e0537146aad8330d34a1d6533fe SHA256 259b19ea3b5d30d8d5700ca1ba2ff38e4b07ef82685b6dd711ca33f192ce8102
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
-EBUILD vmware-server-console-1.0.4.56528.ebuild 2332 RMD160 9f8d1cf5c9e3fa38ae05e69df3c3fcdb1e21b819 SHA1 4ed37701ad90134e36ae3e6669841faa421e2410 SHA256 819e2e73449b4c1544d127b48a9072afdf6a0628f225f83d324b260e64809774
-MD5 cedb47c85271a11f776d35bde7dd6b2a vmware-server-console-1.0.4.56528.ebuild 2332
-RMD160 9f8d1cf5c9e3fa38ae05e69df3c3fcdb1e21b819 vmware-server-console-1.0.4.56528.ebuild 2332
-SHA256 819e2e73449b4c1544d127b48a9072afdf6a0628f225f83d324b260e64809774 vmware-server-console-1.0.4.56528.ebuild 2332
+EBUILD vmware-server-console-1.0.4.56528.ebuild 2396 RMD160 e8a6ba07fe7d3cdcc60b391d659b2eff9fd6bdc9 SHA1 f523bd9614271765938c295c6c18ea85571f72c5 SHA256 efe983e9d36286b117b827585ee496fa2fceaab4d13163aebe87c7fd72a6d1ab
+MD5 3483146b2e5ab3077b95aa9881c8f7af vmware-server-console-1.0.4.56528.ebuild 2396
+RMD160 e8a6ba07fe7d3cdcc60b391d659b2eff9fd6bdc9 vmware-server-console-1.0.4.56528.ebuild 2396
+SHA256 efe983e9d36286b117b827585ee496fa2fceaab4d13163aebe87c7fd72a6d1ab vmware-server-console-1.0.4.56528.ebuild 2396
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
